# Collisions_internship

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  SAT.cpp  SAT.h  Triangle.cpp  Triangle.h  main.cpp
